--- a/examples/ec2.yml
+++ b/examples/ec2.yml
@@ -4,6 +4,6 @@ upstream:
   - 8.8.4.4
 domains:
   - name: ec2.local.
-    command: sdns-ec2 $1
+    command: sdns-ec2
   - name: ec2.
-    command: sdns-ec2 $1
+    command: sdns-ec2
