fix echo example to output arrays

--- a/examples/echo.yml
+++ b/examples/echo.yml
@@ -5,13 +5,13 @@ upstream:
 domains:
   - name: foo
     command: |
-      echo '{ "type": "A", "value": "1.1.1.1" }'
+      echo '[{ "type": "A", "value": "1.1.1.1" }]'
   - name: bar
     command: |
-      echo '{ "type": "A", "value": "1.1.1.2", "ttl": 60 }'
+      echo '[{ "type": "A", "value": "1.1.1.2", "ttl": 60 }]'
   - name: foo.bar
     command: |
-      echo '{ "type": "A", "value": "1.1.1.3", "ttl": 300 }'
+      echo '[{ "type": "A", "value": "1.1.1.3", "ttl": 300 }]'
   - name: boom
     command: |
       echo 'something goes boom' && exit 1
