add multi-RR answer example

--- a/examples/echo.yml
+++ b/examples/echo.yml
@@ -5,7 +5,7 @@ upstream:
 domains:
   - name: foo
     command: |
-      echo '[{ "type": "A", "value": "1.1.1.1" }]'
+      echo '[{ "type": "A", "value": "1.1.1.1", "ttl": 60 }, { "type": "A", "value": "1.1.1.4", "ttl": 60 }]'
   - name: bar
     command: |
       echo '[{ "type": "A", "value": "1.1.1.2", "ttl": 60 }]'
